# gia_ml3_practica1

./: .gitattributes  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: testing.yml
artifacts/models/: detector_base.pkl
data/: fashion-mnist_label_dict.json
notebooks/: datasets.ipynb  notebook_practica1.ipynb  time_graphs.ipynb
results/: tests_fashion-mnist_output.csv
src/: autoencoder.py  denoising_sparse_autoencoder.py  linear_autoencoder.py  linear_sparse_autoencoder.py  mixed_manifold_detector.py  utils.py  variational_autoencoder.py
tests/: conftest.py  test_dimensionality.py  test_fashion_mnist.py  test_metrics_fullsets.py  test_metrics_subsets.py
