[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gia_ml3_practica1"
version = "1.4"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "matplotlib",
    "tqdm",
    "ipykernel"
]

[pyproject.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
mixed-manifold-detector = "mixed_manifold_detector:main"

[tool.setuptools]
py-modules = ["mixed_manifold_detector"]

[tool.setuptools.package-dir]
"" = "src"
